fixtures/cs-enc-02/good/gcm-iv-variable.ts
import { createCipheriv } from "crypto";

export function encrypt(data: Buffer, key: Buffer, iv: Buffer) {
	return createCipheriv("aes-256-gcm", key, iv);
}
